--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,8 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5" # Limita o uso de CPU a 50% de um núcleo
+          memory: "256M" # Limita o uso de memória a 512 MB
