--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.8"
 
 services:
   monitoro:
+    container_name: monitoro-container # Nome do container
+    image: monitoro-image # Nome da imagem
     build:
       context: .
       dockerfile: Dockerfile
@@ -9,9 +11,7 @@ services:
       - .env
     volumes:
       - .:/app
-    ports:
-      - "3000:3000"
-    restart: always
+    restart: unless-stopped # Reinicia o container a menos que seja parado manualmente
     deploy:
       resources:
         limits:
